# nexus-zenoh

.github/workflows/: ci.yml  release.yml
extension/: Cargo.toml  manifest.json
extension/src/: discovery.rs  main.rs  ops.rs  state.rs
plugin/: Dockerfile  plugin.json
plugin/src/: server.js
plugin/src/public/: index.html
